Add if clause in diagram

--- a/demo-app/src/main/resources/set_temperature.form
+++ b/demo-app/src/main/resources/set_temperature.form
@@ -9,7 +9,8 @@
       },
       "id": "Field_1smy0x2",
       "key": "temperature",
-      "description": "set temperature value"
+      "description": "set temperature value",
+      "defaultValue": 0
     }
   ],
   "type": "default",
